--- a/configs/jumpnow_rpi3_defconfig
+++ b/configs/jumpnow_rpi3_defconfig
@@ -3,11 +3,7 @@ BR2_cortex_a7=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_DL_DIR="$(HOME)/dl"
 BR2_CCACHE=y
-BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_14=y
-BR2_BINUTILS_VERSION_2_30_X=y
-BR2_GCC_VERSION_7_X=y
-BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_TOOLCHAIN_EXTERNAL=y
 BR2_INIT_SYSV=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="jumpnowtek"
@@ -69,6 +65,20 @@ BR2_PACKAGE_PYTHON_PYQT5=y
 BR2_PACKAGE_PYTHON_SERIAL=y
 BR2_PACKAGE_PYTHON_SPIDEV=y
 BR2_PACKAGE_SQLITE_NO_SYNC=y
+BR2_PACKAGE_OPENCV3=y
+BR2_PACKAGE_OPENCV3_LIB_CALIB3D=y
+BR2_PACKAGE_OPENCV3_LIB_HIGHGUI=y
+BR2_PACKAGE_OPENCV3_WITH_QT5=y
+BR2_PACKAGE_OPENCV3_LIB_OBJDETECT=y
+BR2_PACKAGE_OPENCV3_LIB_VIDEO=y
+BR2_PACKAGE_OPENCV3_WITH_GSTREAMER1=y
+BR2_PACKAGE_OPENCV3_WITH_JASPER=y
+BR2_PACKAGE_OPENCV3_WITH_JPEG=y
+BR2_PACKAGE_OPENCV3_WITH_V4L=y
+BR2_PACKAGE_OPENCV3_INSTALL_DATA=y
+BR2_PACKAGE_JSONCPP=y
+BR2_PACKAGE_LOG4CXX=y
+BR2_PACKAGE_PAHO_MQTT_C=y
 BR2_PACKAGE_LIBEVDEV=y
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPROUTE2=y
@@ -82,6 +92,8 @@ BR2_PACKAGE_BASH=y
 BR2_PACKAGE_PROCPS_NG=y
 BR2_PACKAGE_VIM=y
 # BR2_PACKAGE_VIM_RUNTIME is not set
+BR2_PACKAGE_MY_APP=y
+BR2_PACKAGE_FANN=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="1966080"
