--- a/configs/jumpnow_rpi3_defconfig
+++ b/configs/jumpnow_rpi3_defconfig
@@ -77,8 +77,39 @@ BR2_PACKAGE_OPENCV3_WITH_JPEG=y
 BR2_PACKAGE_OPENCV3_WITH_V4L=y
 BR2_PACKAGE_OPENCV3_INSTALL_DATA=y
 BR2_PACKAGE_JSONCPP=y
-BR2_PACKAGE_LOG4CXX=y
+BR2_PACKAGE_LIBLOG4C_LOCALTIME=y
 BR2_PACKAGE_PAHO_MQTT_C=y
+BR2_PACKAGE_APR_UTIL=y
+BR2_PACKAGE_BOOST=y
+BR2_PACKAGE_BOOST_ATOMIC=y
+BR2_PACKAGE_BOOST_CHRONO=y
+BR2_PACKAGE_BOOST_CONTAINER=y
+BR2_PACKAGE_BOOST_CONTEXT=y
+BR2_PACKAGE_BOOST_COROUTINE=y
+BR2_PACKAGE_BOOST_DATE_TIME=y
+BR2_PACKAGE_BOOST_EXCEPTION=y
+BR2_PACKAGE_BOOST_FIBER=y
+BR2_PACKAGE_BOOST_FILESYSTEM=y
+BR2_PACKAGE_BOOST_GRAPH=y
+BR2_PACKAGE_BOOST_GRAPH_PARALLEL=y
+BR2_PACKAGE_BOOST_IOSTREAMS=y
+BR2_PACKAGE_BOOST_LOCALE=y
+BR2_PACKAGE_BOOST_LOG=y
+BR2_PACKAGE_BOOST_MATH=y
+BR2_PACKAGE_BOOST_MPI=y
+BR2_PACKAGE_BOOST_PROGRAM_OPTIONS=y
+BR2_PACKAGE_BOOST_PYTHON=y
+BR2_PACKAGE_BOOST_RANDOM=y
+BR2_PACKAGE_BOOST_REGEX=y
+BR2_PACKAGE_BOOST_SERIALIZATION=y
+BR2_PACKAGE_BOOST_SIGNALS=y
+BR2_PACKAGE_BOOST_STACKTRACE=y
+BR2_PACKAGE_BOOST_SYSTEM=y
+BR2_PACKAGE_BOOST_TEST=y
+BR2_PACKAGE_BOOST_THREAD=y
+BR2_PACKAGE_BOOST_TIMER=y
+BR2_PACKAGE_BOOST_TYPE_ERASURE=y
+BR2_PACKAGE_BOOST_WAVE=y
 BR2_PACKAGE_LIBEVDEV=y
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPROUTE2=y
@@ -94,6 +125,7 @@ BR2_PACKAGE_VIM=y
 # BR2_PACKAGE_VIM_RUNTIME is not set
 BR2_PACKAGE_MY_APP=y
 BR2_PACKAGE_FANN=y
+BR2_PACKAGE_SQLITE_MODERNCPP=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="1966080"
