--- a/configs/jumpnow_rpi3_defconfig
+++ b/configs/jumpnow_rpi3_defconfig
@@ -77,7 +77,6 @@ BR2_PACKAGE_OPENCV3_WITH_JPEG=y
 BR2_PACKAGE_OPENCV3_WITH_V4L=y
 BR2_PACKAGE_OPENCV3_INSTALL_DATA=y
 BR2_PACKAGE_JSONCPP=y
-BR2_PACKAGE_LIBLOG4C_LOCALTIME=y
 BR2_PACKAGE_PAHO_MQTT_C=y
 BR2_PACKAGE_APR_UTIL=y
 BR2_PACKAGE_BOOST=y
@@ -126,6 +125,7 @@ BR2_PACKAGE_VIM=y
 BR2_PACKAGE_MY_APP=y
 BR2_PACKAGE_FANN=y
 BR2_PACKAGE_SQLITE_MODERNCPP=y
+BR2_PACKAGE_LOG4C=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="1966080"
