DMS package support added

--- a/configs/dms_rpi3_defconfig
+++ b/configs/dms_rpi3_defconfig
@@ -126,6 +126,7 @@ BR2_PACKAGE_MY_APP=y
 BR2_PACKAGE_FANN=y
 BR2_PACKAGE_SQLITE_MODERNCPP=y
 BR2_PACKAGE_LOG4C=y
+BR2_PACKAGE_DMS=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="1966080"
