--- a/package/Config.in
+++ b/package/Config.in
@@ -2040,5 +2040,7 @@ menu "Custom apps & tools"
 	source "package/my_app/Config.in"
 	source "package/fann/Config.in"
 	source "package/sqlite_moderncpp/Config.in"
+	source "package/log4c/Config.in"
+	source "package/dms/Config.in"
 endmenu
 endmenu
