--- a/configs/dms_rpi3_defconfig
+++ b/configs/dms_rpi3_defconfig
@@ -6,7 +6,7 @@ BR2_CCACHE=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_INIT_SYSV=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
-BR2_TARGET_GENERIC_ROOT_PASSWD="jumpnowtek"
+BR2_TARGET_GENERIC_ROOT_PASSWD="dmsroot"
 BR2_SYSTEM_DHCP="eth0"
 BR2_TARGET_TZ_INFO=y
 BR2_TARGET_LOCALTIME="EST5EDT"
