Added Opencv3 contrib support (extra modules such as tracking)

--- a/package/Config.in
+++ b/package/Config.in
@@ -2042,5 +2042,6 @@ menu "Custom apps & tools"
 	source "package/sqlite_moderncpp/Config.in"
 	source "package/log4c/Config.in"
 	source "package/dms/Config.in"
+	source "package/opencv3_contrib/Config.in"
 endmenu
 endmenu
