Added support for XORG

--- a/configs/dms_rpi3_defconfig
+++ b/configs/dms_rpi3_defconfig
@@ -52,6 +52,9 @@ BR2_PACKAGE_QT5MULTIMEDIA=y
 BR2_PACKAGE_QT5SENSORS=y
 BR2_PACKAGE_QT5SERIALBUS=y
 BR2_PACKAGE_QT5WEBSOCKETS=y
+BR2_PACKAGE_XORG7=y
+BR2_PACKAGE_XSERVER_XORG_SERVER=y
+BR2_PACKAGE_X11VNC=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_X=y
 BR2_PACKAGE_RPI_FIRMWARE_INSTALL_VCDBG=y
