Fixes of improper path and variable name in makefile

--- a/configs/dms_rpi3_defconfig
+++ b/configs/dms_rpi3_defconfig
@@ -130,6 +130,7 @@ BR2_PACKAGE_FANN=y
 BR2_PACKAGE_SQLITE_MODERNCPP=y
 BR2_PACKAGE_LOG4C=y
 BR2_PACKAGE_DMS=y
+BR2_PACKAGE_OPENCV3_CONTRIB=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="1966080"
